# Life-Expectancy-and-GDP

./: LICENSE.txt  README.md  Tutorial 2.ipynb  pyproject.toml
Python_Project.egg-info/: PKG-INFO  SOURCES.txt
python_project/: __init__.py  predictive_model.py
