[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Python_Project"
version = "0.1.0"
description = "A Python package for data analysis and visualization"
authors = [
    { name = "Ojekunle Taiwo", email = "taiwo.ojekunle@tu-dortmund.de" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"


dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "scikit-learn"
]
